--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -9,7 +9,7 @@
     <p id="sum-el">Sum:</p>
     <button onclick="startGame()">START GAME</button>
     <button onclick="newCard()">NEW CARD</button>
-    <!-- 1. Create a NEW CARD button, make it run newCard() on click -->
+    <p id="player-el"></p>
     <script src="index.js"></script>
   </body>
 </html>
