--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -7,6 +7,10 @@
       <span style="color: white">Generate a</span> <br />
       <span style="color: green">random password</span> <br />
       <span id="subtitle">never use an insecure password again</span>
+      <div>
+        <p class="line">Element 1</p>
+        <p>Element 2</p>
+      </div>
     </h1>
     <b></b>
     <script src="index.js"></script>
