--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -23,8 +23,8 @@
     </div>
 
     <div id="bottom">
-      <p id="password1" class="passwordSlot">Password 1</p>
-      <p id="password2" class="passwordSlot">Password 2</p>
+      <p id="passwordOne" class="passwordSlot">Password 1</p>
+      <p id="passwordTwo" class="passwordSlot">Password 2</p>
     </div>
 
     <script src="index.js"></script>
