--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -13,11 +13,11 @@
       <div id="options">
         <input type="checkbox" id="symbolsOption" /> Special Symbols
         <input type="checkbox" id="numberOption" /> Numbers
-        <input type="number" min="5" max="20" id="passwordLength" value="15" />
+        <input type="number" min="8" max="25" id="passwordLength" value="15" />
         Password length
       </div>
 
-      <button onclick="GeneratePassword()" id="PasswordButton">
+      <button onclick="AssignPassword()" id="PasswordButton">
         Generate Password
       </button>
     </div>
